--- a/dom1.html
+++ b/dom1.html
@@ -1,27 +1,43 @@
 <html>
-    <head>
-       
-    </head>
-    <body>
-        <p id="intro1">İlk Paragraf</p>
-        <p id="intro2">İkinci Paragraf</p>
-        <p id="intro3">Üçüncü Paragraf</p>
-        <ul>
-            <li>Ankara</li>
-            <li>İstanbul</li>
-            <li>İzmir</li>
-            <li>Adana</li>
-            <li>Van</li>
-        </ul>
-        <p id="mesaj"></p>
-        <input type="text" name="muşteriAdi" value="Engin Demirog">
-        <h1>Salih Demirog</h1>
-        <h1 id="yazar"></h1>
-        <p id="agac">Ağaç Değeri</p>
-        <div id="div1">
-            <p id="p1">Bu kısım p1</p>
-            <p id="p2">Bu kısım p2</p>
-        </div>
-        <script src="dom1.js"></script>
-    </body>
+
+<head>
+    <style type="text/css">
+        .intro1 {
+            background-color: red;
+        }
+
+        .intro2 {
+            background-color: violet;
+        }
+
+        .intro3 {
+            background-color: blue;
+        }
+    </style>
+
+</head>
+
+<body>
+    <p class="intro1" id="intro1">İlk Paragraf</p>
+    <p class="intro2" id="intro2">İkinci Paragraf</p>
+    <p class="intro3" id="intro3">Üçüncü Paragraf</p>
+    <ul>
+        <li>Ankara</li>
+        <li class="intro1">İstanbul</li>
+        <li>İzmir</li>
+        <li>Adana</li>
+        <li>Van</li>
+    </ul>
+    <p id="mesaj"></p>
+    <input type="text" name="muşteriAdi" value="Engin Demirog">
+    <h1>Salih Demirog</h1>
+    <h1 id="yazar"></h1>
+    <p class="intro1" id="agac">Ağaç Değeri</p>
+    <div id="div1">
+        <p id="p1">Bu kısım p1</p>
+        <p id="p2">Bu kısım p2</p>
+    </div>
+    <script src="dom1.js"></script>
+</body>
+
 </html>
